fixed missing background in chrome

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -99,6 +99,7 @@ section {
 
 .project-card {
     width: 325px;
+    min-width: 325px;
     height: 207px;
     margin: 0 50px 50px 0;
     position: relative;
